fix : 구조 변경
- 의존성 추가 및 예외처리와 매퍼 추가
- 서비스 로직 보강
- 메서드 자바 독 추가